<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class_creation"
    android:background="@drawable/foam"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginBottom="340dp"
        app:cardCornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/learninglogo2" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/classTitleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="25"
        android:hint=" Class title"
        android:textSize="22sp"
        android:textColor="@color/blue_learning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_shadow_white_background"
        android:elevation="15dp"
        ></EditText>

    <EditText
        android:id="@+id/classTeacherET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=" Class teacher"
        android:maxLength="25"
        android:textSize="22sp"
        android:textColor="@color/blue_learning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classTitleET"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_shadow_white_background"
        android:elevation="15dp"
        ></EditText>

    <TextView
        android:onClick="ShowDateDialog"
        android:id="@+id/classStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=" Class start date"
        android:textSize="22sp"
        android:textColor="@color/blue_learning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classTeacherET"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_shadow_white_background"
        android:elevation="15dp"></TextView>

    <TextView
        android:maxLines="1"
        android:onClick="ShowDescDialog"
        android:id="@+id/classDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=" Class description"
        android:textSize="22sp"
        android:textColor="@color/blue_learning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classStartDate"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_shadow_white_background"
        android:elevation="15dp"></TextView>

    <Button
        android:onClick="goNextPage"
        android:id="@+id/NextPageBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_learning"
        android:background="@drawable/background_button_pressed"
        android:text="NEXT"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classDescription"></Button>



</androidx.constraintlayout.widget.ConstraintLayout>