<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context="com.example.tolearn.EditProfile">
    <androidx.cardview.widget.CardView
        android:id="@+id/logo1"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="553dp"
        app:cardCornerRadius="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="121dp"
            android:layout_height="121dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/learninglogo2" />

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
    <EditText
        android:id="@+id/firstNameIde"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/border_shadow_white_background"
        android:drawableLeft="@drawable/ic_baseline_adb_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        android:elevation="20dp"
        android:textColor="@color/blue_learning"
        android:textColorHint="@color/blue_learning"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameIde"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_shadow_white_background"
        android:drawableLeft="@drawable/ic_baseline_adb_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        android:elevation="20dp"
        android:textColor="@color/blue_learning"
        android:textColorHint="@color/blue_learning"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameIde"  />

    <EditText
        android:textColorHint="@color/blue_learning"
        android:id="@+id/eemailid"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_shadow_white_background"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textColor="@color/blue_learning"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameIde"
        android:elevation="20dp"
        />

    <EditText
        android:id="@+id/phoneNumberIde"

        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_shadow_white_background"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/blue_learning"
        android:textColorHint="@color/blue_learning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eemailid"
        android:elevation="20dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEditProfile"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:onClick="EditButtonClicked"
        android:padding="10dp"
        app:cardBackgroundColor="@color/blue_learning"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberIde">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/editInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:text="Edit"
                android:textSize="25dp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        android:textColor="@color/darker_blue_learning"

        app:layout_constraintTop_toBottomOf="@+id/cardViewEditProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:textSize="23sp"
        android:onClick="resetPassword"
        ></TextView>



</androidx.constraintlayout.widget.ConstraintLayout>